Make suree menu works on mobileegit add cms/sass/pages/_homepage.scss

--- a/cms/sass/components/_dropdown.scss
+++ b/cms/sass/components/_dropdown.scss
@@ -66,13 +66,6 @@
   }
 }
 
-.dropdown__trigger {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: $warm-black;
-}
-
 .open > .dropdown__menu {
   display: block;
 }
