--- a/cms/sass/pages/_homepage.scss
+++ b/cms/sass/pages/_homepage.scss
@@ -19,7 +19,7 @@
   }
 
   .secondary-nav {
-    margin-bottom: 100px;
+    margin-bottom: 25px;
   }
 
   a {
